--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		]
 	},
 	"dependencies": {
+		"@radix-ui/react-navigation-menu": "^1.2.0",
 		"@radix-ui/react-slot": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
