--- a/package.json
+++ b/package.json
@@ -18,14 +18,20 @@
 		]
 	},
 	"dependencies": {
+		"@portabletext/react": "^3.1.0",
 		"@radix-ui/react-navigation-menu": "^1.2.0",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@sanity/client": "^6.20.1",
+		"@tanstack/react-query": "^5.49.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.395.0",
+		"moment": "^2.30.1",
 		"next": "14.2.4",
+		"next-sanity": "^9.4.2",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-paginate": "^8.2.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
